--- a/templates/includes/goal_modals.html
+++ b/templates/includes/goal_modals.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="modal-footer border-0">
                     <button type="button" class="btn btn-link text-muted" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-success px-4" onclick="completeGoal({{ goal.id }})" data-bs-dismiss="modal">
+                    <button type="button" class="btn btn-success px-4" onclick="completeGoal({{ goal.id }})">
                         Complete Goal
                     </button>
                 </div>
