--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,9 @@
             </div>
             <div class="col-lg-6 d-none d-lg-block" data-aos="fade-left">
                 <div class="hero-image-container">
+                    <div class="hero-icon">
+                        <i class="fas fa-check-double"></i>
+                    </div>
                     <img src="{{ url_for('static', filename='img/hero.svg') }}" alt="Goal tracking illustration" class="img-fluid floating">
                 </div>
             </div>
