--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,10 @@
     <title>AccountaParts - {% block title %}{% endblock %}</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/icon-192.svg') }}">
     
     <!-- PWA Icons -->
-    <link rel="apple-touch-icon" href="{{ url_for('static', filename='img/icon-192.png') }}">
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='img/icon-192.svg') }}">
     <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     
     <!-- Fonts -->
